# burnout

./: README.md  readme.md
chapter_descriptions/: 1. Intorduction.md  2. setup.md  3. Ros Introduction.md  4. locomotion.md  5. control.md
devel/: .catkin  .rosinstall
devel/lib/car_controller/: simple_controller_node.py
devel/lib/car_core/: simple_cpp_publisher  simple_cpp_subscriber  simple_publisher.py
devel/lib/pkgconfig/: car_controller.pc  car_core.pc  car_description.pc
devel/lib/python3/dist-packages/car_controller/: __init__.py
devel/share/car_controller/cmake/: car_controllerConfig.cmake
devel/share/car_core/cmake/: car_coreConfig.cmake
devel/share/car_description/cmake/: car_descriptionConfig.cmake
src/car_controller/: CMakeLists.txt
src/car_controller/config/: joystick.yaml  simple_controller.yaml
src/car_controller/launch/: controller.launch  joystick_teleop.launch
src/car_controller/src/car_controller/: simple_controller.py
src/car_core/: CMakeLists.txt
src/car_core/nodes/: simple_publisher.cpp  simple_subscriber.cpp
src/car_core/src/turtle_examples/: turtlesim_kinematics.py
src/car_description/: package.xml
src/car_description/launch/: display.launch  gazebo.launch
src/car_description/rviz/: display.rviz
src/car_description/urdf/: car.urdf.xacro  car_gazebo.xacro
